# codegen

./: readme.md  strip-trailing.sh
codegen/: codegen-cpp.sh  codegen-ts.sh  yaml2json.sh
schemas/: animal.yaml  definitions.yaml  encode_task.yaml  transform_task.yaml  vehicle.yaml
stage/: .config  install-all.sh  install-node-packages.sh  install-node.sh  install-nvm.sh  install-ubuntu-deps.sh
test-cpp/: .clang-format  .vscode.code-workspace  CMakeLists.txt  build-simple.sh  code.sh  conanfile.py  format.sh
test-cpp/cmake/: bootstrap.cmake  conan.cmake  gtest.cmake  sanitizers.cmake
test-cpp/codegen/: CMakeLists.txt
test-cpp/test/: CMakeLists.txt  codegen_gtest.cc
test-regress/: test.sh
test-regress/out-ref/: out.ts
test-regress/out-ref/cpp/: quicktype.cc  quicktype.h  quicktype_fwd.h  validator.cc  validator.h  validator_schemas.cc  validator_schemas.h
test-ts/: .eslintrc.yaml  codegen.sh  lint.sh  package-lock.json  package.json  tsconfig.json
test-ts/test/: animal.spec.ts  mocha.ts
